--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,9 +17,33 @@
     .logo-container h3{
     font-size: 1rem;
     }
-  
-
-
+  /* banner section */
+    .banner-container{
+        flex-direction: column;
+        margin-top: 20px;
+    }
+    .banner-content{
+        width: 100%;
+    }
+    .banner-content h3{
+    font-size: 1.5rem;
+    }
+    .banner-content p {
+    font-size: 1.25rem;
+    }
+    .banner-img{
+        width: 100%;
+    }
+    .social-icon{
+    font-size: 1.5rem;
+    margin: -10px 0 15px 10px;
+    }
+    .banner-btn{
+    padding: 8px 14px;
+    font-size: 1rem;
+    border-radius: 5px;
+    margin-right: 10px;
+    }
 
 
 
