--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,60 @@ color: #9376e0;
     color: black;
     font-weight: 700;
 }
+/* banner section styles */
 
+.banner-container{
+    /* border: 1px solid red; */
+    margin-top: 50px;
+    max-width: 1400px;
+    margin: 50px  auto 0;
+    min-height: 50px;
+    display: flex;
+    background-color: rgba(112, 128, 144, 0.178);
+    border-radius: 10px;
+}
+.banner-content{
+    text-align: center;
+    width: 50%;
+}
+.banner-content h3{
+    font-size: 50px;
+    background-image: linear-gradient(to bottom, #9376e0, #e893cf);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    margin-bottom: -20px;
+}
+.banner-content p {
+    font-size: 35px;
+    font-family: "Dancing Script", cursive;
+}
+.banner-img{
+    width: 50%;
+    padding: 10px;
+}
+.banner-img img{
+    width: 100%;
+    border-radius: 10px;
+    height: auto;
+}
+.social-icon{
+    font-size: 2.5rem;
+    /* margin-bottom: 15px; */
+    margin: -10px 0 15px 10px;
+
+}
+.social-icon .fa-brands{
+    margin-right: 20px;
+
+}
+.banner-btn{
+    background-color: transparent;
+    border: 2px solid #9376e0;
+    padding: 10px 25px;
+    font-size: 1rem;
+    border-radius: 5px;
+    margin-right: 10px;
+}
 
 
