--- a/css/responsive.css
+++ b/css/responsive.css
@@ -44,7 +44,10 @@
     border-radius: 5px;
     margin-right: 10px;
     }
+/* all products section styles */
+.product-container{
+    grid-template-columns: 1fr;
 
-
+}
 
 }
