--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ color: #9376e0;
 /* banner section styles */
 
 .banner-container{
-    /* border: 1px solid red; */
     margin-top: 50px;
     max-width: 1400px;
     margin: 50px  auto 0;
@@ -104,13 +103,10 @@ color: #9376e0;
 }
 .social-icon{
     font-size: 2.5rem;
-    /* margin-bottom: 15px; */
     margin: -10px 0 15px 10px;
-
 }
 .social-icon .fa-brands{
     margin-right: 20px;
-
 }
 .banner-btn{
     background-color: transparent;
@@ -120,5 +116,69 @@ color: #9376e0;
     border-radius: 5px;
     margin-right: 10px;
 }
-
-
+/* all products section styles */
+.all-products{
+    margin-bottom: 10px;
+   text-align: center;
+}
+.product-container{
+    max-width: 1400px;
+    margin: 50px  auto 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+.product-container{
+    max-width: 1400px;
+    margin: 50px  auto 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+.card{
+    padding: 10px;
+    background-color: rgba(112, 128, 144, 0.253);
+    box-shadow: 2px 2px 4px black;
+    border-radius: 10px
+}
+.card p{
+   text-align: justify;
+   font-size: 18px;
+}
+.card img{
+    width: 70%;
+    display: block;
+    margin: 0 auto;
+}
+.card-icon .fa-cart-shopping{
+    padding: 10px;
+    border-radius: 50%;
+    border: 0;
+    text-align: center;
+    background-color: #e893cf;
+    color: black;
+}
+.card-icon .fa-credit-card{
+    padding: 10px;
+    border-radius: 50%;
+    border: 0;
+    text-align: center;
+    background-color: green;
+    color: white;
+}
+.card-icon .fa-eye{
+    padding: 10px;
+    border-radius: 50%;
+    border: 0;
+    text-align: center;
+    background-color: #9376E0;
+    color: white;
+}
+.card-title-icon-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.card-title-icon-container h3{
+   color: black;
+}
