--- a/css/responsive.css
+++ b/css/responsive.css
@@ -69,5 +69,17 @@
     font-size: 0.75rem; 
     line-height: 18px;  
 }
+.discout-buy-button {
+    padding: 10px 20px;
+    border: 1px solid white;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0 auto;
+}
+.discount-number{
+    width: 50px;
+    height: 50px;
+    font-size: 12px;
+}
 
 }
