--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,9 @@ color: #9376e0;
     background-color: #E893CF;
     
 }
+.single-review p{
+    text-align: justify;
+}
 .customer-info{
     display: flex;
     justify-content: space-between;
@@ -268,4 +271,41 @@ color: #9376e0;
 }
 .customer-info h3{
     font-size: 20px;
+}
+/* footer section styles */
+
+footer{
+   text-align: center;
+   background-color: #9376E0;
+   margin: 50px auto 0;
+}
+.footer-container{
+   max-width: 700px;
+   margin: 0 auto;
+   padding: 50px;
+}
+.footer-top{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.footer-top h3{
+    margin-bottom: 20px;
+}
+.footer-top .urban{
+    color: #fff;
+    font-size: 20px;
+}
+.footer-top .hive{
+    color: #e893cf;
+    font-size: 20px;
+}
+.footer-top img{
+    max-width: 60px;
+}
+.footer-container p{
+    color: #fff;
+    margin-top: 0px;
+    text-align: center;
+     justify-content: center;
 }
